Various bug squashes.

--- a/frontend/src/main/css/TodoList.css
+++ b/frontend/src/main/css/TodoList.css
@@ -1,6 +1,6 @@
 /* Todo Items Displays */
 #todos {
-	padding: 0 15px 0 8px; /* 7px gets added as border for status */
+	padding: 15px 15px 0 8px; /* 7px gets added as border for status */
 	list-style: none;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
@@ -19,6 +19,10 @@
 @media only screen and (min-width: 475px) {
 	#create-todo {
 		top: -64px;
+	}
+
+	#todos {
+		padding-top: 0;
 	}
 }
 
